Add Some BitcoinDiamond Pictures

--- a/icons.qrc
+++ b/icons.qrc
@@ -1,6 +1,8 @@
 <RCC>
   <qresource prefix="/" >
-    <file>icons/electrum.png</file>
+    <file>icons/electrum_bcd.png</file>
+    <file>icons/electrum_bcd_light_icon.png</file>
+    <file>icons/electrum_bcd_dark_icon.png</file>
     <file>icons/clock1.png</file>
     <file>icons/clock2.png</file>
     <file>icons/clock3.png</file>
